# ChangeLog for app-misc/cl-network-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Dec 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> cl-network-meta-11.0-r2.ebuild:
  remove x11-plugins/pidgin-facebookchat

*cl-network-meta-11.0-r2 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-network-meta-11.0-r1.ebuild, +cl-network-meta-11.0-r2.ebuild:
  Renamed USE flag to CDISTRO.

*cl-network-meta-11.0-r1 (22 Nov 2010)

  22 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-network-meta-11.0.ebuild, +cl-network-meta-11.0-r1.ebuild:
  daily update

*cl-network-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-network-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
