@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cl-network-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-network-meta-11.0-r5 (09 Feb 2011)
+
+  09 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-network-meta-11.0-r4.ebuild, +cl-network-meta-11.0-r5.ebuild:
+  Remove Pino for CLDG, CLDX
 
   30 Dec 2010; Трацевский Александр
   <atratsevskiy@gentoo.org> cl-network-meta-11.0-r2.ebuild:
